<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="app_name">JustJava</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g id="customer" example="Ben"></xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="hasWhippedCream" example="Ben"></xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="hasChocolate" example="Ben"></xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="Ben"></xliff:g></string>
    <string name="order_summary_price">Total: $<xliff:g id="price" example="Ben"></xliff:g></string>
    <string name="thank_you">Thank you!</string>

</resources>
